Improve op mode update warning message - Add warning counter - Improve error counter grammar - Fix  layout bug in metadata validation status list

--- a/static/style.css
+++ b/static/style.css
@@ -585,6 +585,14 @@ summary.data-collection-category::marker {
     display: inline;
 }
 
+.details-validation .warning-counter {
+    display: none;
+}
+
+.details-validation:has(ul .text-warning) .warning-counter {
+    display: inline;
+}
+
 .file-list-group-item .total-time-validated {
     display: none;
 }
